@@ -1,3 +1,7 @@
+2000-05-09  Norbert Schnell  <schnell@ligeti.ircam.fr>
+
+	* fts/src/runtime/client/incoming.c: fixed memory corruption bug
+
 2000-05-04  Francois Dechelle  <dechelle@lipari.ircam.fr>
 
 	* packages/ispw/src/data/table.c: added save as .pat
